@@ -30,8 +30,9 @@ Syslog server port. The default value is \fB514\fR.
 \fB\-D\fR, \fB\-\-debug\fR <level>
 Set message debug level. Currently there are five message levels.
 0 = default messages, 1 = show PSI tables, 2 = show EMMs 3 = show
-duplicate ECMs, 4 = packet debug. Setting higher level enables the
-levels bellow.
+duplicate ECMs, 4 = packet debug. 5 = packet debug + mpeg ts packet
+dump.
+Setting higher level enables the levels bellow.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 Show program help.
